[package]
name = "flashrom_tester"
version = "1.6.0"
authors = ["Edward O'Callaghan <quasisec@chromium.org>",
           "Peter Marheine <pmarheine@chromium.org>"]
description = "A tool to verify flashrom and flash chip behaviour."
license = "GPL-2.0-only"
edition = "2018"
build = "build.rs"

[lib]
name = "flashrom_tester"

[[bin]]
name = "flashrom_tester"
required-features = ["cli"]

[workspace]
members = [".", "flashrom"]

[dependencies]
atty = "0.2"
built = { version = "0.5", features = ["chrono"] }
chrono = { version = "0.4", optional = true }
clap = { version = "2.33", default-features = false, optional = true }
flashrom = { path = "flashrom/" }
libc = "0.2"
libflashrom = { path = "../../bindings/rust/libflashrom" }
log = { version = "0.4", features = ["std"] }
rand = "0.6.4"
serde_json = "1"
sys-info = "0.9"

[build-dependencies]
built = { version = "0.5", features = ["chrono"] }

[dev-dependencies]
gag = "1"

[features]
# Features required to build the CLI binary but not the library
cli = ["chrono", "clap"]
default = ["cli"]
