[package]
name = "libflashrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflashrom-sys = { path = "../libflashrom-sys" }
libc = "0.2.124"
regex = "1.5.5"
once_cell = "1.7.2"

[dev-dependencies]
rusty-fork = "0.3.0"
gag = "1"

[build-dependencies]
pkg-config = "0.3.19"
cc = "1.0.72"
